--- a/src/pages/admin/settings/settings.scss
+++ b/src/pages/admin/settings/settings.scss
@@ -1,4 +1,11 @@
 page-settings {
+
+    .item-name {
+  box-shadow: 0 0.5px 1px rgba(0, 0, 0, 0.3);
+  background-color: #f5f2f2;
+  font-size: 18px;
+   font-family: "Times New Roman", Times, serif;
+}
     .banners {
         .label {
             margin-bottom: 0px;
