--- a/src/pages/user/myorder/myorder.scss
+++ b/src/pages/user/myorder/myorder.scss
@@ -1,17 +1,16 @@
 page-myorder {
-.label-md {
-    margin: 1px 7px 1px 0px;
-}
+	.item{
+    	border-bottom: 1px solid rgba(206, 206, 206, 0.8);
+    }
+    .col{
+    	width:33%;
+    }
 
-.label-ios {
-    margin: 1px 7px 1px 0px;
-}
+    .list-padding{
+    	padding: 0px 16px 0px 16px;
+    }
 
-.list-ios {
-    margin: 0px 0 10px 0px;
-}
-}
-
-.item{
-	padding-left:7px;
-}
+    .list{
+    	margin: 0px;
+    }    
+ }  
