--- a/src/pages/user/product-info/product-info.scss
+++ b/src/pages/user/product-info/product-info.scss
@@ -147,4 +147,18 @@ scroll-content{
     border-bottom: none;
   }
 
+    .divider-name{
+       font-size: 16px;
+       font-family: "Times New Roman", Times, serif;
+    }
+
+    .product-name{
+       font-size: 24px;
+       font-family: "Times New Roman", Times, serif;
+    }
+    .price-padding{
+      padding-top: 10px;
+      padding-bottom: 15px;
+    }
+
   }
