--- a/src/pages/user/shop/shop.scss
+++ b/src/pages/user/shop/shop.scss
@@ -1,5 +1,10 @@
 .home {
 
+.image-size{
+  width: 100%;
+  height: 50%;
+}
+
 font-family: arial;
 
 .card-md ion-card-content {
@@ -17,9 +22,14 @@ ion-card{
 }
 
 .shop-name{
-  .item{
+  
+   .item{
    background-color: #f4f4f4;
   }
+    .header-font-size{
+        font-size: 18px;
+        font-family: "Times New Roman", Times, serif;
+    }
 }
 
 .item.item-block .item-inner {
@@ -70,9 +80,6 @@ p {
     color: #fff;
   }
 }
-
-}
-
 .badge {
   position: absolute;
   top: -8%;
@@ -91,3 +98,49 @@ ion-icon[item-left] + .item-inner {
 .searchbar-md {
     margin-bottom: 0;
 }
+
+
+
+
+$row-columns: 2;
+
+@for $i from 1 through $row-columns {
+  .col-#{$i} {
+    width: percentage($i / $row-columns);
+  }
+}
+
+
+// styles
+[class^='col-'] {
+  border: 1px solid;
+  box-sizing: border-box;
+  float: left;
+  padding: 1em 0;
+  text-align: center;
+}
+
+.title{
+
+    &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    //background: linear-gradient(to left, rgba(0,0,0,1) 10%,rgba(0,0,0,0) 90%);
+    background: linear-gradient(to top, #999999 7%, transparent 21%);
+    opacity: .6; 
+    }
+
+  }
+
+  .row.unlimited-items .brand-col{
+  flex: none;
+  width: 33%;
+  padding: 5px 5px 0 0;
+}
+
+}
+
