--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -27,6 +27,7 @@ $colors: (
   primary:    #387ef5,
   secondary:  #32db64,
   danger:     #f53d3d,
+ // danger:     #0066ff,
   light:      #f4f4f4,
   dark:       #222,
 
