--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-tabs color="danger">
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-   <ion-tab [root]="tab2Root" tabTitle="Cart" tabIcon="cart" tabBadge="{{values.qty}}" tabBadgeStyle="primary"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="{{ 'Home' | translate }} " tabIcon="home"></ion-tab>
+   <ion-tab [root]="tab2Root" tabTitle="{{ 'Cart' | translate }} " tabIcon="cart" tabBadge="{{values.qty}}" tabBadgeStyle="primary"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="{{ 'Profile' | translate }} " tabIcon="person"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Admin" tabIcon="person"></ion-tab> <!-- Either Add *ngIf="values.isLoggedIn && values.userRole === 'Admin'" insde this tab Or Delete This line for customer App -->
-  <ion-tab [root]="tab5Root" tabTitle="Blogs" tabIcon="logo-rss"></ion-tab>
+  <!-- <ion-tab [root]="tab5Root" tabTitle="Blogs" tabIcon="logo-rss"></ion-tab> -->
 </ion-tabs>
